@@ -618,7 +618,8 @@
 4) init.d: more human readable variable name and prevent overwrites in dependen logic.<br>
 5) init.d: touch switch in some cases make depend at switch parth instead of direct mode check.<br>
 6) init.d: switch workaround in kext use config-vlan.sh instead off config-switch.sh.<br>
-7) kernel: mipd: avoid mcheck by flushing page range in huge_ptep_set_access_flags().<br>
+7) kernel: mips: avoid mcheck by flushing page range in huge_ptep_set_access_flags().<br>
+8) kernel: mips: fix branch emulation of branch likely instructions.<br>
 <br>
 <br>
 <b>TODO:</b><br>
